fix CSS issue with z-index

--- a/app/assets/stylesheets/modules/_base.scss
+++ b/app/assets/stylesheets/modules/_base.scss
@@ -123,7 +123,7 @@ button,
 .edit-header {
   position: sticky;
   top: 0;
-  z-index: 1006;
+  z-index: 21;
   width: 100%;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 
