--- a/app/assets/stylesheets/modules/_structure.scss
+++ b/app/assets/stylesheets/modules/_structure.scss
@@ -37,7 +37,7 @@ textarea {
 /* Header */
 
 header {
-  z-index: 3;
+  z-index: 22;
   position: relative;
 
   .top-bar {
